--- a/n10empresas.html
+++ b/n10empresas.html
@@ -112,59 +112,70 @@
                 </div>
             </nav>
         </header> 
-        <h1 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1>
-        <div class="container">
-            <div class="row g-3">
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_4915.jpg" alt="Timbre Trodat 4915" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4915</h5>
+        <section id="n10empresas" class="py-5 bg-light">      
+            <div class="container-lg text-center"> <!-- Before container-->
+                <div class="text-center">
+                    <h2 class="display-6">Aquí encontrarás tus timbres de impresión y grabados en Santiago</h2>    
+                    <p class="lead text-muted">Sorprendentes ofertas</p>
+                </div>
+                <div class="row py-5">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0">                     
+                            <img src="assets/imgs/portada_trodat_4915.jpg" alt="Timbre Trodat 4915" class="card-img-top img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Trodat 4915</h5>
+                                <p class="card-text lead">CLP 15.500</p> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                        <div class="card border-0">                     
+                            <img src="assets/imgs/portada_trodat_4925.jpg" alt="Timbres Trodat 4925" class="card-img-top img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Trodat 4925</h5>
+                                <p class="card-text lead">CLP 25.500</p>                       
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                        <div class="card border-0">                     
+                            <img src="assets/imgs/portada_trodat_4926.jpg" alt="Timbres Trodat 4926" class="card-img-top img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Trodat 4926</h5> 
+                                <p class="card-text lead">CLP 26.500</p>                      
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                        <div class="card border-0">                     
+                            <img src="assets/imgs/portada_trodat_4927.jpg" alt="Timbres Trodat 4927" class="card-img-top img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Trodat 4927</h5> 
+                                <p class="card-text lead">CLP 27.500</p>                      
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                        <div class="card border-0">                     
+                            <img src="assets/imgs/portada_trodat_4931.jpg" alt="Timbres Trodat 4931" class="card-img-top img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Trodat 4931</h5>
+                                <p class="card-text lead">CLP 31.500</p>                       
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                        <div class="card border-0">                     
+                            <img src="assets/imgs/portada_trodat_4638.jpg" alt="Timbres Trodat 4638" class="card-img-top img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Trodat 4638</h5>
+                                <p class="card-text lead">CLP 38.500</p>                       
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_4925.jpg" alt="Timbres Trodat 4925" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4925</h5>                      
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_4926.jpg" alt="Timbres Trodat 4926" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4926</h5>                      
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_4927.jpg" alt="Timbres Trodat 4927" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4927</h5>                      
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_4931.jpg" alt="Timbres Trodat 4931" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4931</h5>                      
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_4638.jpg" alt="Timbres Trodat 4638" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat 4638</h5>                      
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> 
+            </div> 
+        </section>
         <section id="contacto" class="contacto seccion-oscura">
             <div class="container">     
                 <div class="container text-center rectangulo d-flex justify-content-evenly ">
