--- a/n10empresas.html
+++ b/n10empresas.html
@@ -121,14 +121,15 @@
                 <div class="row py-5">
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card border-0">                     
-                            <img src="assets/imgs/portada_trodat_4915.jpg" alt="Timbre Trodat 4915" class="card-img-top img-fluid">
+                            <img src="assets/imgs/portada_trodat_4915.jpg" alt="Timbre Trodat 4915"
+                                class="card-img-top img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4915</h5>
                                 <p class="card-text lead">CLP 15.500</p> 
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card border-0">                     
                             <img src="assets/imgs/portada_trodat_4925.jpg" alt="Timbres Trodat 4925" class="card-img-top img-fluid">
                             <div class="card-body text-center mb-5">
@@ -137,7 +138,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card border-0">                     
                             <img src="assets/imgs/portada_trodat_4926.jpg" alt="Timbres Trodat 4926" class="card-img-top img-fluid">
                             <div class="card-body text-center mb-5">
@@ -146,7 +147,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card border-0">                     
                             <img src="assets/imgs/portada_trodat_4927.jpg" alt="Timbres Trodat 4927" class="card-img-top img-fluid">
                             <div class="card-body text-center mb-5">
@@ -155,7 +156,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card border-0">                     
                             <img src="assets/imgs/portada_trodat_4931.jpg" alt="Timbres Trodat 4931" class="card-img-top img-fluid">
                             <div class="card-body text-center mb-5">
@@ -164,7 +165,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card border-0">                     
                             <img src="assets/imgs/portada_trodat_4638.jpg" alt="Timbres Trodat 4638" class="card-img-top img-fluid">
                             <div class="card-body text-center mb-5">
