--- a/n30fechadores.html
+++ b/n30fechadores.html
@@ -261,7 +261,7 @@
                 </a>
             </div>
             <div class="derechos-de-autor">
-                &#169; Miguelito y Junípero - Medellín / Santiago de Chile (2024) &#169;
+                &#169; Timbrexpres SpA / Santiago de Chile (2024) &#169;
             </div>
         </footer>       
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
