--- a/n30fechadores.html
+++ b/n30fechadores.html
@@ -112,115 +112,134 @@
                 </div>
             </nav>
         </header> 
-        <h1 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1>
-        <div class="container">
-            <div class="row g-3">
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                      
-                        <img src="assets/imgs/portada_trodat_46130.jpg" alt="Timbre fechador 46130" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 46130</h5>                            
-                        </div>
-                    </div>
+        <section id="n30fechadores">
+            
+            <div class="container-lg text-center"> <!-- Before container-->
+                <div class="text-center">                    
+                    <h2 class="display-6">Aquí encontrarás tus timbres de impresión y grabados en Santiago</h2>    
+                    <p class="lead text-muted">Sorprendentes ofertas</p>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/portada_trodat_46140.jpg" alt="Timbre fechador 46140" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 46140</h5>                            
+                <div class="row py-5">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0">                       
+                            <img src="assets/imgs/portada_trodat_46130.jpg" alt="Timbre fechador 46130" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 46130</h5>  
+                                <p class="card-text lead">CLP 46.130</p>                          
+                            </div>
                         </div>
                     </div>
-                </div>     
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_4727.jpg" alt="Timbre fechador 4727" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 4727</h5>                            
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                            <img src="assets/imgs/portada_trodat_46140.jpg" alt="Timbre fechador 46140" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 46140</h5> 
+                                <p class="card-text lead">CLP 46.130</p>                            
+                            </div>
                         </div>
-                    </div>
-                </div>         
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                        <img src="assets/imgs/portada_trodat_4729.jpg" alt="Timbre fechador 4729" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 4729</h5>                            
+                    </div>     
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0">                        
+                            <img src="assets/imgs/portada_trodat_4727.jpg" alt="Timbre fechador 4727" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 4727</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
                         </div>
-                    </div>
-                </div>   
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_4750.jpg" alt="Timbre fechador 4750" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 4750</h5>                            
+                    </div>         
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                            <img src="assets/imgs/portada_trodat_4729.jpg" alt="Timbre fechador 4729" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 4729</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
                         </div>
-                    </div>
-                </div>  
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_4810.jpg" alt="Timbre fechador 4810" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 4810</h5>                            
+                    </div>   
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_4750.jpg" alt="Timbre fechador 4750" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 4750</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
                         </div>
-                    </div>
-                </div>      
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_4820.jpg" alt="Timbre fechador 4820" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 4820</h5>                            
+                    </div>  
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_4810.jpg" alt="Timbre fechador 4810" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 4810</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
                         </div>
-                    </div>
-                </div>       
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_5440.jpg" alt="Timbre fechador 5440" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 5440</h5>                            
+                    </div>      
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_4820.jpg" alt="Timbre fechador 4820" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 4820</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
                         </div>
-                    </div>
-                </div>      
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_5460.jpg" alt="Timbre fechador 5460" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 5460</h5>                            
+                    </div>       
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_5440.jpg" alt="Timbre fechador 5440" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 5440</h5> 
+                                <p class="card-text lead">CLP 46.130</p>                            
+                            </div>
                         </div>
-                    </div>
-                </div>         
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_5470.jpg" alt="Timbre fechador 5470" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Fechador Trodat 5470</h5>                            
+                    </div>      
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_5460.jpg" alt="Timbre fechador 5460" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 5460</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
                         </div>
-                    </div>
-                </div>  
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_55510.jpg" alt="Timbre numerador 55510" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Numerador Trodat 55510</h5>                            
+                    </div>         
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_5470.jpg" alt="Timbre fechador 5470" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Fechador Trodat 5470</h5>
+                                <p class="card-text lead">CLP 46.130</p>                            
+                            </div>
                         </div>
-                    </div>
-                </div>       
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_1596.jpg" alt="Timbre numerador Trodat 1596" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Numerador Trodat 1596</h5>                            
+                    </div>  
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_55510.jpg" alt="Timbre numerador 55510" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Numerador Trodat 55510</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
                         </div>
-                    </div>
-                </div>      
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">
-                    <img src="assets/imgs/portada_trodat_1598.jpg" alt="Timbre numerador Trodat 1598" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Numerador Trodat 1598</h5>                            
+                    </div>       
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_1596.jpg" alt="Timbre numerador Trodat 1596" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Numerador Trodat 1596</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
                         </div>
-                    </div>
-                </div>                                                                                                                                     
-            </div>
-        </div> 
+                    </div>      
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0"> 
+                        <img src="assets/imgs/portada_trodat_1598.jpg" alt="Timbre numerador Trodat 1598" class="card-img-top  img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Timbre Numerador Trodat 1598</h5>
+                                <p class="card-text lead">CLP 46.130</p>                             
+                            </div>
+                        </div>
+                    </div>                                                                                                                                     
+                </div>
+            </div> 
+        </section>
         <section id="contacto" class="contacto seccion-oscura">
             <div class="container">     
                 <div class="container text-center rectangulo d-flex justify-content-evenly ">
