--- a/p200piochas.html
+++ b/p200piochas.html
@@ -112,25 +112,36 @@
                 </div>
             </nav>
         </header> 
-        <h1 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1>
-        <div class="container">
-            <div class="row g-3">
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_piochas_01.jpg" alt="Piochas" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Piochas</h5>
+        <section id="piochas" class="py-5 bg-light">        
+            <div class="container-lg text-center"> <!-- Before container-->
+                <div class="text-center">                    
+                    <h2 class="display-6">Aquí encontrarás tus timbres de impresión y grabados en Santiago</h2>    
+                    <p class="lead text-muted">Sorprendentes ofertas</p>
+                </div>
+                <div class="row py-5">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0">                     
+                            <img src="assets/imgs/portada_piochas_01.jpg" alt="Piochas" 
+                                class="card-img-top img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Piochas</h5>
+                                <p class="card-text lead">CLP 11.800</p> 
+                            </div>
                         </div>
                     </div>
-                    <div class="card">                       
-                        <img src="assets/imgs/PIOCHAS_LUIS.jpg" alt="PersonalTags " class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Personal Tags</h5>
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
+                        <div class="card border-0">                     
+                            <img src="assets/imgs/PIOCHAS_LUIS.jpg" alt="PersonalTags" 
+                                class="card-img-top img-fluid">
+                            <div class="card-body text-center mb-5">
+                                <h5 class="card-title">Personal Tags</h5>
+                                <p class="card-text lead">CLP 11.800</p> 
+                            </div>
                         </div>
-                    </div>
-                </div>              
-            </div>
-        </div> 
+                    </div>                     
+                </div>
+            </div> 
+        </section>
         <section id="contacto" class="contacto seccion-oscura">
             <div class="container">     
                 <div class="container text-center rectangulo d-flex justify-content-evenly ">
@@ -176,6 +187,4 @@
         </footer>       
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
-    
-</body>
 </html>
