--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                                         <li><a href="p900cards.html"
                                             class="dropdown-item">-c</a> </li>   
                                         <li><a href="p910cardswithimages.html"
-                                            class="dropdown-item">-i</a> </li>    
+                                            class="dropdown-item">-i</a> </li>  
+                                        <li><a href="p920grids.html"
+                                                class="dropdown-item">-g</a> </li>       
                                     </ul>                    
                                 </li>
                                 <li class="nav-item dropdown">
