--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                             class="dropdown-item">-c</a> </li>   
                                         <li><a href="p910cardswithimages.html"
                                             class="dropdown-item">-i</a> </li>  
-                                        <li><a href="p920grids.html"
+                                        <li><a href="g910grids.html"
                                                 class="dropdown-item">-g</a> </li>       
                                     </ul>                    
                                 </li>
