--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                         id="navbarDropdown" role="button"
                                         data-bs-toggle="dropdown"
                                         aria-expanded="false">
-                                            Grabados
+                                            Grabados y Grabados
                                     </a>
                                     <ul class="dropdown-menu"
                                         arialabelledby="navbarDropdown">
