--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Bootstrap CSS -->
         
-        <title>Bootstrap demo oct 07</title>        
+        <title>Bootstrap Dec 06</title>        
              <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
             
         <!-- My CSS -->           
